--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <meta name="title" content="PIICSA - Picture to ASCII Art Generator">
+  <meta name="description"
+    content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time.">
+  <meta name="keywords" content="ASCII art, image converter, picture to text, ASCII generator">
+  <meta name="author" content="Sanket Nighot">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://piicsa.sanketnighot.com/">
+  <meta property="og:title" content="PIICSA - Picture to ASCII Art Generator">
+  <meta property="og:description"
+    content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time.">
+  <meta property="og:image" content="https://piicsa.sanketnighot.com/logo.svg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://piicsa.sanketnighot.com/">
+  <meta property="twitter:title" content="PIICSA - Picture to ASCII Art Generator">
+  <meta property="twitter:description"
+    content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time.">
+  <meta property="twitter:image" content="https://piicsa.sanketnighot.com/logo.svg">
+  <title>PIICSA</title>
 </head>
 
 <body>
