chore: updated preview to readme, formatted code

--- a/index.html
+++ b/index.html
@@ -1,37 +1,56 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="PIICSA - Picture to ASCII Art Generator" />
+    <meta
+      name="description"
+      content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time."
+    />
+    <meta
+      name="keywords"
+      content="ASCII art, image converter, picture to text, ASCII generator"
+    />
+    <meta name="author" content="Sanket Nighot" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="PIICSA - Picture to ASCII Art Generator">
-  <meta name="description"
-    content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time.">
-  <meta name="keywords" content="ASCII art, image converter, picture to text, ASCII generator">
-  <meta name="author" content="Sanket Nighot">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://piicsa.sanketnighot.com/" />
+    <meta
+      property="og:title"
+      content="PIICSA - Picture to ASCII Art Generator"
+    />
+    <meta
+      property="og:description"
+      content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time."
+    />
+    <meta
+      property="og:image"
+      content="https://piicsa.sanketnighot.com/logo.svg"
+    />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://piicsa.sanketnighot.com/">
-  <meta property="og:title" content="PIICSA - Picture to ASCII Art Generator">
-  <meta property="og:description"
-    content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time.">
-  <meta property="og:image" content="https://piicsa.sanketnighot.com/logo.svg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://piicsa.sanketnighot.com/" />
+    <meta
+      property="twitter:title"
+      content="PIICSA - Picture to ASCII Art Generator"
+    />
+    <meta
+      property="twitter:description"
+      content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time."
+    />
+    <meta
+      property="twitter:image"
+      content="https://piicsa.sanketnighot.com/logo.svg"
+    />
+    <title>PIICSA</title>
+  </head>
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://piicsa.sanketnighot.com/">
-  <meta property="twitter:title" content="PIICSA - Picture to ASCII Art Generator">
-  <meta property="twitter:description"
-    content="Transform your images into unique ASCII art with PIICSA. Upload, adjust, and generate ASCII representations of your pictures in real-time.">
-  <meta property="twitter:image" content="https://piicsa.sanketnighot.com/logo.svg">
-  <title>PIICSA</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
